// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CLI > can run a simple command 1`] = `
[log] <Yellow>></Color> Task <Bold>hello</BoldDim> started
Hello from nadle!
[log] <Green>✓</Color> Task <Bold>hello</BoldDim> done in _ms
[log] 
<Bold><Green>RUN SUCCESSFUL</Color></BoldDim> <Bold>1</BoldDim> tasks in <Bold>_ms</BoldDim>
`;

exports[`CLI > can run dependent task first 1`] = `
[log] <Yellow>></Color> Task <Bold>prepare</BoldDim> started
Preparing...
[log] <Green>✓</Color> Task <Bold>prepare</BoldDim> done in _ms
[log] <Yellow>></Color> Task <Bold>copy</BoldDim> started
Copying from assets/ to dist/
[log] <Green>✓</Color> Task <Bold>copy</BoldDim> done in _ms
[log] 
<Bold><Green>RUN SUCCESSFUL</Color></BoldDim> <Bold>2</BoldDim> tasks in <Bold>_ms</BoldDim>
`;

exports[`CLI > can run two commands sequentially 1`] = `
[log] <Yellow>></Color> Task <Bold>hello</BoldDim> started
Hello from nadle!
[log] <Green>✓</Color> Task <Bold>hello</BoldDim> done in _ms
[log] <Yellow>></Color> Task <Bold>goodbye</BoldDim> started
Goodbye, tak!
[log] <Green>✓</Color> Task <Bold>goodbye</BoldDim> done in _ms
[log] 
<Bold><Green>RUN SUCCESSFUL</Color></BoldDim> <Bold>2</BoldDim> tasks in <Bold>_ms</BoldDim>
`;
